--- a/src/app/game/game.component.sass
+++ b/src/app/game/game.component.sass
@@ -39,5 +39,9 @@
   overflow: auto
   padding: 8px
 
+.hand-header
+  display: flex
+  justify-content: space-between
+
 .overflow
   overflow: auto
