initial logs view impl

--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -5,6 +5,7 @@
       [players]="players"
       [canAct]="canAct"
     ></app-player-container>
+    <app-logs-container [gameview$]="gameview$"></app-logs-container>
   </div>
 </div>
 <mat-divider [vertical]="true"></mat-divider>
