--- a/src/app/unit-container/unit-container.component.html
+++ b/src/app/unit-container/unit-container.component.html
@@ -1,12 +1,13 @@
-<app-unit
-  appEntity
-  appTargetable
-  @slideIn
-  *ngFor="let state of unitStates"
-  [entityId]="state.unit.id"
-  [ownerId]="state.unit.ownerEntity"
-  [players]="players"
-  [unit]="state.unit"
-  [card]="state.card"
-  [canAct]="canAct"
-></app-unit>
+<!-- NOTE: This wrapper div is necessary for the :leave animation. -->
+<div *ngFor="let state of unitStates" @slideInOut>
+  <app-unit
+    appEntity
+    appTargetable
+    [entityId]="state.unit.id"
+    [ownerId]="state.unit.ownerEntity"
+    [players]="players"
+    [unit]="state.unit"
+    [card]="state.card"
+    [canAct]="canAct"
+  ></app-unit>
+</div>
