--- a/src/app/logs-container/logs-container.component.html
+++ b/src/app/logs-container/logs-container.component.html
@@ -1,14 +1,9 @@
-<mat-list dense>
-  <mat-list-item *ngFor="let log of filteredLogs">
-    {{ log.ownerName }}: {{ log.commandName }}
-    <ng-container *ngIf="log.intValue != null">
-      {{ log.intValue }}</ng-container
-    >
-    <ng-container *ngIf="log.boolValue != null">
-      {{ log.boolValue }}</ng-container
-    >
-    <ng-container *ngIf="log.ownerName != log.originName">
-      from {{ log.originName }}
-    </ng-container>
-  </mat-list-item>
-</mat-list>
+<ng-container *ngFor="let log of logs; let i = index">
+  <div>
+    <span *ngIf="log.ownerName != log.originName">{{ log.originName }}: </span>
+    {{ log.description }}
+  </div>
+  <div *ngIf="logs[i + 1]?.ownerName != log.ownerName">
+    --- {{ log.ownerName }} ---
+  </div>
+</ng-container>
