--- a/src/app/game/game.component.sass
+++ b/src/app/game/game.component.sass
@@ -8,11 +8,14 @@
   overflow-x: hidden
   overflow-y: auto
 
-.players
+.playersAndLogs
   align-items: center
   display: flex
   flex: 1
   flex-direction: column
+
+  .players
+    flex: 0 0 auto
 
 .forge
   align-items: center
