--- a/src/app/logs-container/logs-container.component.sass
+++ b/src/app/logs-container/logs-container.component.sass
@@ -1,3 +1,10 @@
 :host
   display: flex
   flex-direction: column-reverse
+
+.header
+  font-weight: 700
+  margin-top: 10px
+
+.origin
+  font-weight: 500
