--- a/src/app/card/card.component.sass
+++ b/src/app/card/card.component.sass
@@ -12,9 +12,9 @@
 .static-container
   display: flex
   flex-direction: column
-  height: 9vw
-  padding: 10px
-  width: 9vw
+  height: 160px
+  padding: 8px
+  width: 160px
 
 .header
   display: flex
