--- a/src/app/player/player.component.sass
+++ b/src/app/player/player.component.sass
@@ -7,8 +7,8 @@
   flex-direction: column
   margin: 5px
   min-width: 120px
-  padding: 10px
-  width: 9vw
+  padding: 8px
+  width: 160px
   word-break: break-word
 
 :host(.isCurrent)
